# firstcode

./: .gitignore  CMakeLists.txt  HugeInt_Class.cpp  README.md  bigint.cpp  bubblesort.cpp  chongzai.cpp  classvector.cpp  complex.cpp  hugeint.cpp  rational.cpp  test_bigint.cpp
