cmake_minimum_required(VERSION 3.12)
project(FirstCode)

# 添加可执行文件
add_executable(FirstCode bubblesort.cpp)

# 添加其他源文件
# add_executable(FirstCode main.cpp file1.cpp file2.cpp)

# 添加头文件搜索路径
# include_directories(include)

# 添加链接库
# target_link_libraries(FirstCode library_name)

# 设置编译选项
# set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

# 设置输出路径
# set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

# 设置安装路径
# install(TARGETS FirstCode DESTINATION bin)
